--- a/public/mdl/material.css
+++ b/public/mdl/material.css
@@ -6372,7 +6372,7 @@ ul, ol {
 
 .mdl-layout {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -6436,7 +6436,7 @@ ul, ol {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   border-right: 1px solid rgb(224,224,224);
-  background: rgb(250,250,250);
+  background: #2A6CB6;
   -webkit-transform: translateX(-250px);
       -ms-transform: translateX(-250px);
           transform: translateX(-250px);
